> Fixes logo width on mobile

--- a/source/stylus/_daily.styl
+++ b/source/stylus/_daily.styl
@@ -77,3 +77,7 @@ body
   font-weight bold
   text-transform uppercase
   letter-spacing 0.65em
+
+  svg
+    max-width 100%
+    height auto
